--- a/testkube/argocd/testkube-application.yaml
+++ b/testkube/argocd/testkube-application.yaml
@@ -8,7 +8,7 @@ spec:
  source:
    repoURL: https://github.com/phuocnguyendang87/testkube-argocd.git
    targetRevision: HEAD
-   path: testkube/postman-collection
+   path: testkube/pm-collection
    plugin:
      name: "testkube-v1.0"
  destination:
