Edit cypress dir and testkube cypress app

--- a/testkube/argocd/testkube-cypress.yaml
+++ b/testkube/argocd/testkube-cypress.yaml
@@ -6,12 +6,9 @@ metadata:
 spec:
  project: default
  source:
-  #  repoURL: https://github.com/kubeshop/testkube.git
-  #  targetRevision: HEAD
-  #  path: test/cypress/executor-tests/cypress-11/cypress/e2e
-   repoURL: https://github.com/phuocnguyendang87/testkube-argocd.git
+   repoURL: https://github.com/kubeshop/testkube.git
    targetRevision: HEAD
-   path: testkube/cypress-e2e
+   path: test/cypress/executor-tests/cypress-11/cypress/e2e
    plugin:
      name: "testkube-v1.0"
  destination:
